crates/products/wt/client/src/snapshots/wt_cli__ssh__tests__duplicate_world_names_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host local.same-host
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.same-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no

Host local.same
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias local.same-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='local.same - repo' /usr/local/bin/wt-app-shell

Host local.same-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias local.same-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression no
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no local.same-host /usr/local/bin/wt-devcontainer-ssh-proxy

Host lab.same-host
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias lab.same-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host lab.same
  HostName 192.0.2.2
  User wt
  Port 22
  HostKeyAlias lab.same-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.same - repo' /usr/local/bin/wt-app-shell

Host lab.same-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.same-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no lab.same-host /usr/local/bin/wt-devcontainer-ssh-proxy
