crates/products/wt/client/src/snapshots/wt_cli__ssh__tests__remote_worlds_ssh_config.snap
---
source: crates/products/wt/client/src/ssh.rs
expression: "normalize_home(&managed, temp.path())"
---
# Generated by wt sync. Do not edit.

Host lab.world-one-host
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host lab.world-one
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-one - repo' /usr/local/bin/wt-app-shell

Host lab.world-one-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.world-one-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no lab.world-one-host /usr/local/bin/wt-app-proxy

Host world-one-host
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host world-one
  HostName 192.0.2.10
  User wt
  Port 22
  HostKeyAlias lab.world-one-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-one - repo' /usr/local/bin/wt-app-shell

Host world-one-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.world-one-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no lab.world-one-host /usr/local/bin/wt-app-proxy

Host lab.world-two-host
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host lab.world-two
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-two - repo' /usr/local/bin/wt-app-shell

Host lab.world-two-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.world-two-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no lab.world-two-host /usr/local/bin/wt-app-proxy

Host world-two-host
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server

Host world-two
  HostName 192.0.2.11
  User wt
  Port 22
  HostKeyAlias lab.world-two-host
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  ProxyJump wt-server
  RequestTTY force
  RemoteCommand BYOBU_ALT_TITLE='lab.world-two - repo' /usr/local/bin/wt-app-shell

Host world-two-vs
  HostName wt-app
  User vscode
  Port 2222
  HostKeyAlias lab.world-two-vs
  UserKnownHostsFile "[HOME]/.ssh/wt/known_hosts"
  StrictHostKeyChecking yes
  Compression yes
  ServerAliveInterval 30
  ServerAliveCountMax 3
  PasswordAuthentication no
  KbdInteractiveAuthentication no
  SetEnv TERM=xterm-256color
  ProxyCommand ssh -F "[HOME]/.ssh/config" -o Compression=no lab.world-two-host /usr/local/bin/wt-app-proxy
